fix link on registry page getting covered by image

--- a/src/app/registry/registry.component.css
+++ b/src/app/registry/registry.component.css
@@ -21,6 +21,7 @@ span {
 
 a {
   text-decoration: none;
+  color: var(--link-color);
 }
 
 img {
